[package]
name = "fubar-proxy"
version = "0.1.0"
authors = ["Prateek Nischal <PNischal@walmartlabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json", "blocking"] }
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
bytes = "0.6.0"
serde = "1.0.117"
